<resources>
    <string name="tasks">Tasks</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginToSystem">Login to system</string>
    <string name="username">Username</string>
    <string name="cannotBeBlank">Can not be blank</string>
    <string name="passwordToShort">PasswordTooShort</string>
    <string name="unknownError">Unknown error</string>
    <string name="account">Account</string>
    <string name="failedToLoad">Failed to load</string>
    <string name="clickToTryAgain">Click to try again</string>
    <string name="cause">Cause</string>
    <string name="groupManager">Group manager</string>
    <string name="group">Group</string>
    <string name="logout">Logout</string>
    <string name="remainingSessionTime">Remaining session time</string>
    <string name="groupMembers">Group members</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="timeToCompleteTask">Time to complete task</string>
    <string name="map">Map</string>
    <string name="workerReport">Worker report</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="description">Description</string>
    <string name="taskFinished">Task finished</string>
    <string name="couldNotLoadCurrentLocation">Could not load current location</string>
    <string name="tooFarFromTaskDestination">Too far from task destination</string>
    <string name="locationPermissionRequired">Location permission required</string>
    <string name="appName">Workflow manager client</string>
    <string name="created">Created</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="accepted">Accepted</string>
    <string name="addTask">Add task</string>
    <string name="taskCreated">Task created</string>
    <string name="createTask">Create task</string>
    <string name="name">Name</string>
    <string name="autoAssign">Auto assign</string>
    <string name="create">Create</string>
    <string name="deadline">Deadline</string>
    <string name="executionTime">Execution time</string>
    <string name="notAssigned">Not assigned</string>
    <string name="selectLocalization">Select localization</string>
    <string name="localization">Localization</string>
    <string name="managerReport">Manager report</string>
    <string name="superTask">Super task</string>
    <string name="remainingTime">Remaining time</string>
    <string name="assignedWorker">Assigned worker</string>
    <string name="estimatedExecutionTime">Estimated execution time</string>
    <string name="fixTask">Fix task</string>
    <string name="taskAccepted">Task accepted</string>
    <string name="accept">Accept</string>
    <string name="acceptWithFix">Accept with fix</string>
    <string name="createReport">Create report</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="taskDetails">Task details</string>
    <string name="notAllowedToBrowseThisResource">Not allowed to see this value</string>
    <string name="title_activity_coordinator">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="groups">Groups</string>
    <string name="localizations">Localizations</string>
    <string name="users">Users</string>
    <string name="addUser">Add user</string>
    <string name="worker">Worker</string>
    <string name="manager">Manager</string>
    <string name="userDisabled">User disabled</string>
    <string name="userEnabled">User enabled</string>
    <string name="userCreated">User created</string>
    <string name="createUser">Create user</string>
    <string name="addLocalization">Add localization</string>
    <string name="localizationCreated">Localization created</string>
    <string name="createLocalization">Create localization</string>
    <string name="newLocalization">New localization</string>
    <string name="addGroup">Add group</string>
    <string name="groupCreated">Group created</string>
    <string name="notSelected">Not selected</string>
    <string name="createGroup">Create group</string>
    <string name="update">Update</string>
    <string name="updateGroup">Update group</string>
    <string name="groupUpdated">Group updated</string>
    <string name="addWorker">Add worker</string>

</resources>