<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_groups_coordinator">

    <fragment
        android:id="@+id/navigation_groups_coordinator"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.group.GroupCoordinatorFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups_coordinator" >
        <action
            android:id="@+id/action_navigation_groups_coordinator_to_groupCoordinatorPostFragment"
            app:destination="@id/groupCoordinatorPostFragment" />
        <action
            android:id="@+id/action_navigation_groups_coordinator_to_groupCoordinatorPatchFragment"
            app:destination="@id/groupCoordinatorPatchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_localizations_coordinator"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.localization.LocalizationCoordinatorFragment"
        android:label="@string/localizations"
        tools:layout="@layout/fragment_localizations_coordinator" >
        <action
            android:id="@+id/action_navigation_localizations_coordinator_to_localizationCoordinatorPostFragment"
            app:destination="@id/localizationCoordinatorPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account_coordinator"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.account.AccountCoordinatorFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account_coordinator" >
        <action
            android:id="@+id/action_navigation_account_coordinator_to_accountCoordinatorPostFragment"
            app:destination="@id/accountCoordinatorPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountCoordinatorPostFragment"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.account.post.AccountCoordinatorPostFragment"
        android:label="@string/createUser"
        tools:layout="@layout/fragment_account_coordinator_post"/>
    <fragment
        android:id="@+id/localizationCoordinatorPostFragment"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.localization.post.LocalizationCoordinatorPostFragment"
        android:label="@string/createLocalization"
        tools:layout="@layout/fragment_localizations_coordinator_post"/>
    <fragment
        android:id="@+id/groupCoordinatorPostFragment"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.group.post.GroupCoordinatorPostFragment"
        android:label="@string/createGroup"
        tools:layout="@layout/fragment_groups_coordinator_post"/>
    <fragment
        android:id="@+id/groupCoordinatorPatchFragment"
        android:name="pl.polsl.workflow.manager.client.ui.coordinator.group.patch.GroupCoordinatorPatchFragment"
        android:label="@string/updateGroup"
        tools:layout="@layout/fragment_groups_coordinator_patch"/>
</navigation>