<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_navigation"
    app:startDestination="@+id/navigation_task_worker">

    <fragment
        android:id="@+id/navigation_task_worker"
        android:name="pl.polsl.workflow.manager.client.ui.worker.task.TaskWorkerFragment"
        android:label="@string/tasks"
        tools:layout="@layout/fragment_task_worker" >
        <action
            android:id="@+id/action_navigation_home_to_mapsFragment"
            app:destination="@id/navigation_destination_maps" />
        <action
            android:id="@+id/action_navigation_task_to_navigation_task_worker_report_post"
            app:destination="@id/navigation_task_worker_report_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_task_worker_report_post"
        android:name="pl.polsl.workflow.manager.client.ui.worker.task.report.TaskWorkerReportPostFragment"
        android:label="@string/workerReport"
        tools:layout="@layout/fragment_task_worker_report_post" />

    <fragment
        android:id="@+id/navigation_account_worker"
        android:name="pl.polsl.workflow.manager.client.ui.worker.account.AccountWorkerFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account_worker" />
    <fragment
        android:id="@+id/navigation_destination_maps"
        android:name="pl.polsl.workflow.manager.client.ui.map.DestinationMapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_destination_map" />

</navigation>