<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="pl.polsl.workflow.manager.client.ui.manager.task.report.post.TaskManagerReportPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.manager.task.report.post.TaskManagerReportPostFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/managerTaskReportPostDescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:hint="@string/description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeColor="@color/text_input_box_stroke"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/managerTaskReportPostDescription"
                android:scrollbars="vertical"
                android:lines="8"
                android:minLines="6"
                android:gravity="top|start"
                android:maxLines="10"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/managerTaskReportPostFailure"
            android:stateListAnimator="@null"
            android:text="@string/acceptWithFix"
            app:layout_constraintTop_toTopOf="@id/managerTaskReportPostSuccess"
            app:layout_constraintStart_toStartOf="@id/managerTaskReportPostDescriptionContainer"
            app:layout_constraintEnd_toStartOf="@id/managerTaskReportPostSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/managerTaskReportPostSuccess"
            android:stateListAnimator="@null"
            android:text="@string/accept"
            app:layout_constraintTop_toBottomOf="@id/managerTaskReportPostDescriptionContainer"
            app:layout_constraintEnd_toEndOf="@id/managerTaskReportPostDescriptionContainer"
            app:layout_constraintStart_toEndOf="@id/managerTaskReportPostFailure"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <include
            android:id="@+id/managerTaskReportPostLoadingView"
            layout="@layout/loading_view"
            tools:visibility="gone"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"/>

        <include
            android:id="@+id/managerTaskReportPostFailedToLoadView"
            layout="@layout/failed_to_load_view"
            tools:visibility="gone"
            android:visibility="@{viewModel.error != null ? View.VISIBLE : View.GONE}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>